# rl_base_tactical_planner

./: README.md
outdoor_robot_spawner/: package.xml  setup.cfg  setup.py
outdoor_robot_spawner/launch/: discretized_hospital.launch.py  gazebo_world.launch.py  headless_world.launch.py  start_training.launch.py  test.launch.py  trained_agent.launch.py
outdoor_robot_spawner/logs/PPO_test_14022025_002626_0/: events.out.tfevents.1739489186.Dhaval-lad.28263.0
outdoor_robot_spawner/logs/PPO_test_14022025_002626_2_0/: events.out.tfevents.1739745186.Dhaval-lad.10706.0  events.out.tfevents.1739745940.Dhaval-lad.11294.0
outdoor_robot_spawner/logs/PPO_test_14022025_002626_3_0/: events.out.tfevents.1740090288.Dhaval-lad.8352.0
outdoor_robot_spawner/logs/PPO_test_28012025_004942_0/: events.out.tfevents.1738021783.Dhaval-lad.8118.0
outdoor_robot_spawner/models/4WD_robot/: model.config  model.sdf
outdoor_robot_spawner/models/actor_1/: actor1.sdf  model.config
outdoor_robot_spawner/models/actor_2/: actor2.sdf  model.config
outdoor_robot_spawner/models/pioneer3at/: model.sdf
outdoor_robot_spawner/outdoor_robot_spawner/: outdoorbot_env.py  outdoorbot_simplified_env.py  robot_controller.py  spawn_demo.py  start_training.py  trained_agent.py
outdoor_robot_spawner/worlds/: outdoor_world_0.world
